// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:timeline dot size is adjusted 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-right"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-xl __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible auto-detail-class"
          >
            error
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-sm __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible auto-detail-class"
          >
            success
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-lg __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-hide-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible auto-detail-class"
          >
            warning
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline itemTitleSchema 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-right"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-icon"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--success"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline items 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-right"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-icon"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--success"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-right"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--success"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-left"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--success"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 3`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-alternate"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--success"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 4`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-top"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-first-line"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-line"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--success"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-second-line"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-inner-content-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-inner-content-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-inner-content-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content-align--center"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-inner-content-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 5`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-right"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--success"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline source 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Timeline __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Timeline-right"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-icon"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          数据开发
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            2019-02-07detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          管理中心
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            2019-02-08detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-background--warning"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          SQL语句
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            2019-02-09detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-icon"
        >
          <icon-mock
            class="icon icon-compress-alt"
            icon="compress-alt"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            2019-02-10detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round-wrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-round"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            2019-02-11detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-axle __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-size-md __PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-point-align--top"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-line"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-icon"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TimelineItem-detail-visible"
          >
            2019-02-12detail
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
